--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://img.icons8.com/nolan/2x/sort-right.png" type="image/png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -68,5 +69,34 @@
               </li>
             </ul>
           </nav>
+          <div id="skills" class="skills">
+            <h2 class="skills__title">SKILLS</h2>
+            <ul class="skill__list">
+              <li class="skill__list--item uppercase">html5</li>
+              <li class="skill__list--item uppercase">css3</li>
+              <li class="skill__list--item uppercase">javascript</li>
+              <li class="skill__list--item purple uppercase">
+                Atención al detalle
+              </li>
+              <li id="purple" class="skill__list--item purple uppercase">persistente</li>
+            </ul>
+    </div>
+    <footer class="footer">
+      <div class="footer__links">
+        <ul>
+          <li>
+            <a class="footer__links--link" href="#header" rel="header__link"
+              >INICIO</a
+            >
+          </li>
+          <li>
+            <a class="footer__links--link" href="#skills" rel="skills__link"
+              >SKILLS</a
+            >
+          </li>
+        </ul>
+      </div>
+      <p class="footer__copyright">© Copyright 2022. Made by VtreV</p>
+</footer>
 </body>
 </html>
