--- a/HTML/actividadesCss/flex layout/index.html
+++ b/HTML/actividadesCss/flex layout/index.html
@@ -11,7 +11,8 @@
     <div class="header">
       FLEX WEBSITE
     </div>
-    
+
+  <div class="container">
     <div class="sidebar">
       <ul>
         <li><a href="#">❤️ - link one</a></li>
@@ -28,7 +29,8 @@
     <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
     <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
     <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
-</div>
+    </div>
+  </div>
 
     <div class="footer">
       My project ❤️
