--- a/JAVASCRIPT/replica Dayseeker/index.html
+++ b/JAVASCRIPT/replica Dayseeker/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <title>Dayseeker</title>
 </head>
 <body>
-    <div class="container">
         <header>
             <div class="headerArriba">
                 <ion-icon name="logo-instagram" role="img" class="md hydrated"></ion-icon>
                 <ion-icon name="logo-facebook" role="img" class="md hydrated"></ion-icon>
                 <ion-icon name="logo-youtube" role="img" class="md hydrated"></ion-icon>
-                <ion-icon name="logo-youtube" role="img" class="md hydrated"></ion-icon>
             </div>
             <div class="headerAbajo">
-                <button class="find">
-                    <ion-icon name="search-outline"></ion-icon>
-                </button>
+                <div class="containerFind">
+                    <button class="find">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
+                </div>
                 <div class="title">
                     <ul class="listIzquierda">
                         <li>HOME</li>
@@ -103,12 +104,16 @@
                     </div>
                 </main>
                 <footer>
-                    <div id="footer">
-                        <img src="./imagenes/CapturaFOOTER.PNG" alt="footer">
-                    </div>
+                    <h2>SIGN UP AND SAVE</h2>
+                    <p>Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.</p>
+                    <input type="email" placeholder="Enter your email">
+                    <ion-icon name="logo-instagram" role="img" class="md hydrated"></ion-icon>
+                    <ion-icon name="logo-facebook" role="img" class="md hydrated"></ion-icon>
+                    <ion-icon name="logo-youtube" role="img" class="md hydrated"></ion-icon>
+                    <ion-icon name="logo-twitter" role="img" class="md hydrated"></ion-icon>
+                    <h2>POWERED BY ABSOLUTE MERCH</h2>
                 </footer>
-            </div>
-        </div>
-    </div>  
+                <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+                <script nomodule="" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> 
 </body>
 </html>
