--- a/JAVASCRIPT/replica Dayseeker/index.html
+++ b/JAVASCRIPT/replica Dayseeker/index.html
@@ -49,9 +49,7 @@
                         <img src="./imagenes/DS_BANNER_1944x.jpg" alt="dayseeker-logo">
                     </div>
                     <div class="shop">
-                        <div class="header-shop">
                             <h2 class="titulo-header-shop">FEATURED COLLECTION</h2>
-                        </div>
                         <div class="store">
                             <article>
                                 <img src="./imagenes/lavender sleeptalk hoodie.webp"/>
@@ -97,21 +95,22 @@
                     </div>
     
                     <div class="video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/hY9TVwgePxU?si=Wz9IZ03SAQRlew4Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/hY9TVwgePxU?si=Vs2cbH4smZp-Gmrx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <div class="textoVideo">
                             <h1>CRYING WHILE YOU`RE DANCING</h1>
                         </div>
                     </div>
                 </main>
                 <footer>
-                    <h2>SIGN UP AND SAVE</h2>
+                    <h3>SIGN UP AND SAVE</h3>
                     <p>Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.</p>
                     <input type="email" placeholder="Enter your email">
-                    <ion-icon name="logo-instagram" role="img" class="md hydrated"></ion-icon>
-                    <ion-icon name="logo-facebook" role="img" class="md hydrated"></ion-icon>
-                    <ion-icon name="logo-youtube" role="img" class="md hydrated"></ion-icon>
-                    <ion-icon name="logo-twitter" role="img" class="md hydrated"></ion-icon>
-                    <h2>POWERED BY ABSOLUTE MERCH</h2>
+                    <div class="footer">
+                        <ion-icon name="logo-instagram" role="img" class="md hydrated"></ion-icon>
+                        <ion-icon name="logo-facebook" role="img" class="md hydrated"></ion-icon>
+                        <ion-icon name="logo-youtube" role="img" class="md hydrated"></ion-icon>
+                    </div>
+                    <h3>POWERED BY ABSOLUTE MERCH</h3>
                 </footer>
                 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
                 <script nomodule="" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> 
