--- a/HTML/portfolio/index.html
+++ b/HTML/portfolio/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <header id="header" class="header">
-    <img class="header__images--background" src="./assets/headerPortfolio.png" alt="background image"/>
+    <h1 class="header__text--title">ABEL GARCIA</h1>
+    <h2 class="header__text--subtitle">FULL-STACK DEVELOPER</h2>
+    <p class="header__text--info">Soy desarrollador FullStack y este es mi portfolio.</p>
     <nav class="nav">
       <ul class="nav__links">
         <li>
@@ -52,16 +54,11 @@
       </ul>
     </nav>
 </header>
-
-<div>
-  <h1 class="header__text--title">ABEL GARCIA</h1>
-  <h2 class="header__text--subtitle">FULL-STACK DEVELOPER</h2>
-  <p class="header__text--info">Soy desarrollador FullStack y este es mi portfolio.</p>
-</div>
 <main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-            <h2 class="skills__title">SKILLS</h2>
+    <div class="skills">
+      <h2 class="skills__title">SKILLS</h2>
             <ul class="skill__list">
               <li class="skill__list--item uppercase">html5</li>
               <li class="skill__list--item uppercase">css3</li>
@@ -69,18 +66,15 @@
               <li class="skill__list--item purple uppercase">Atención al detalle</li>
               <li id="purple" class="skill__list--item purple uppercase">persistente</li>
             </ul>
-
-            <ul>
-              <li><a class="footer__links--link" href="#header" rel="header__link">INICIO</a></li>
-              <li><a class="footer__links--link" href="#skills" rel="skills__link">SKILLS</a></li>
-            </ul>
-
-            <div class="proyecto1"></div>
-            <div class="proyecto2"></div>
-            <div class="proyecto3"></div>
-            <div class="proyecto4"></div>
-            <div class="proyecto5"></div>
-            <div class="proyecto6"></div>
+    </div>
+    <div class="proyectos">
+      <div class="proyecto1"><p>Proyecto 1</p></div>
+      <div class="proyecto2"><p>Proyecto 2</p></div>
+      <div class="proyecto3"><p>Proyecto 3</p></div>
+      <div class="proyecto4"><p>Proyecto 4</p></div>
+      <div class="proyecto5"><p>Proyecto 5</p></div>
+      <div class="proyecto6"><p>Proyecto 6</p></div>
+    </div>
           </main>
 <footer class="footer">
   <p class="footer__copyright">© Copyright 2022. Made by VtreV</p>
